Changed header to `X-Movary-Token` and moved the contents of `authentication.assert.http` to `authentication.http`
